--- a/Random Forests/RF_example.ipynb
+++ b/Random Forests/RF_example.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f335a428-fe83-4486-829b-c0b26da2661e",
    "metadata": {},
    "outputs": [],
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "732a08a9-c122-4c8a-bd6a-05f89a54b802",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "d848507a-b44b-439f-a6fd-b01916f7f7dd",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "231.00793641093313"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,16 +644,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c0f1b605-b584-4523-ae49-083f164fccf1",
-   "metadata": {},
-   "source": [
-    "## Feature seletion"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "29bb1c4e-82fb-4e34-a28b-e3543af66990",
    "metadata": {},
    "outputs": [
@@ -666,18 +658,20 @@
        "       1.79971566, 0.36868179, 0.65089667, 0.45750668])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#degisken onem duzeyleri kontrolu\n",
+    "\n",
     "rf_tuned.feature_importances_*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "706fa2b6-025d-46bc-9b14-cccb82622aab",
    "metadata": {},
    "outputs": [
@@ -707,6 +701,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "11f9e0c4-8029-4207-9324-151893db0b0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e15692d6-050f-4f0b-b7c1-c375acb538c7",
    "metadata": {},
    "outputs": [],
    "source": []
